ignore tests makefile for c

--- a/c/Makefile
+++ b/c/Makefile
@@ -3,8 +3,8 @@
 
 all: libcitrusleaf
 	$(MAKE) -C example
-	$(MAKE) -C tests/key_c 
-	$(MAKE) -C tests/loop_c
+	#$(MAKE) -C tests/key_c 
+	#$(MAKE) -C tests/loop_c
 
 	@echo "done."
 
