genrate nif.so by rebar rather than gcc

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,10 @@
+{port_env, [
+    {"DRV_LDFLAGS", "-shared $ERL_LDFLAGS"},
+    {"darwin", "DRV_LDFLAGS", "-bundle -flat_namespace -undefined suppress $ERL_LDFLAGS"},
+    {"DRV_CFLAGS", "-Ic_src/include -Ic/include -g -Wall -fPIC $ERL_CFLAGS"}
+]}.
+
 {port_specs, [
-    {"priv/aerospike_nif.so", [
-    ]}
+    {"priv/aerospike_nif.so", ["c_src/*.c"]}
 ]}.
 
