rebar generate nif file done

--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,10 @@
 {port_env, [
-    {"DRV_LDFLAGS", "-shared $ERL_LDFLAGS"},
-    {"darwin", "DRV_LDFLAGS", "-bundle -flat_namespace -undefined suppress $ERL_LDFLAGS"},
-    {"DRV_CFLAGS", "-Ic_src/include -Ic/include -g -Wall -fPIC $ERL_CFLAGS"}
+    {"DRV_LDFLAGS", "-shared $ERL_LDFLAGS -lerl_interface -pthread -lssl -pthread -lrt -lcrypto"},
+    {"darwin", "DRV_LDFLAGS", "-bundle -flat_namespace -undefined suppress $ERL_LDFLAGS -lerl_interface -pthread -lssl -pthread -lrt -lcrypto"},
+    {"DRV_CFLAGS", "-Ic_src/include -Ic/include -g -Wall -MMD -fno-common -fno-strict-aliasing -rdynamic -std=gnu99 -D_REENTRANT -D MARCH_x86_64 -march=nocona -fPIC $ERL_CFLAGS"}
 ]}.
 
 {port_specs, [
-    {"priv/aerospike_nif.so", ["c_src/*.c"]}
+    {"priv/aerospike_nif.so", ["c_src/*.c", "c/src/*.c"]}
 ]}.
 
